mdapioutput/objects/SampleDrop__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>Pharma Activity</label>
        <referenceTo>CTPHARMA__Activity__c</referenceTo>
        <relationshipLabel>Sample Drops</relationshipLabel>
        <relationshipName>SampleDrops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AddressId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Sample Drops</relationshipLabel>
        <relationshipName>SampleDrops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvailableQuantity__c</fullName>
        <formula>StoreProductId__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Drops</relationshipLabel>
        <relationshipName>SampleDrops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>ReferenceId__r.CTPHARMA__ContactId__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropDate__c</fullName>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PharmaProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharma Product</label>
		<lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CTPHARMA__Product__c.ProductSAPcode__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CTPHARMA__Product__c</referenceTo>
        <relationshipLabel>Sample Drops</relationshipLabel>
        <relationshipName>SampleDrops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>&apos;Lot Number# &apos;+  StoreProductId__r.LotId__r.LotNumber__c  +&apos; | &apos;+&apos;Expiration date &apos;+&apos;&apos;+ Text(DAY( StoreProductId__r.ExpirationDate__c )) +&apos;-&apos;+ text(MONTH(StoreProductId__r.ExpirationDate__c))+&apos;-&apos;+text(YEAR(StoreProductId__r.ExpirationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference</label>
        <referenceTo>CTPHARMA__Reference__c</referenceTo>
        <relationshipLabel>Sample Drops</relationshipLabel>
        <relationshipName>SampleDrops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SignatureConfirmation__c</fullName>
        <label>Signature Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Audit</fullName>
                    <default>true</default>
                    <label>Waiting for Audit</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StoreProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Product</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Store Product doesn&apos;t match Pharma Product you have chosen</errorMessage>
            <filterItems>
                <field>$Source.PharmaProductId__c</field>
                <operation>equals</operation>
                <valueField>StoreProduct__c.PharmaProductId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>StoreProduct__c</referenceTo>
        <relationshipLabel>Sample Drops</relationshipLabel>
        <relationshipName>SampleDrops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StoreProductLot__c</fullName>
        <formula>StoreProductId__r.LotId__r.LotNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Product Lot #</label>
        <type>Text</type>
    </fields>
    <label>Sample Drop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Sample Drop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Drops</pluralLabel>
    <recordTypes>
        <fullName>Mobile_Sample_Delivery</fullName>
        <active>false</active>
        <label>Mobile Sample Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Sample_Drop</fullName>
        <active>false</active>
        <label>Mobile Sample Drop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample_Delivery</fullName>
        <active>true</active>
        <label>Sample Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample_Drop</fullName>
        <active>true</active>
        <label>Sample Drop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pharma_Product_Rule</fullName>
        <active>false</active>
        <description>Pharma Product must be the same as Store Product.</description>
        <errorConditionFormula>PharmaProductId__r.Id &lt;&gt; StoreProductId__r.PharmaProductId__r.Id</errorConditionFormula>
        <errorDisplayField>PharmaProductId__c</errorDisplayField>
        <errorMessage>Pharma Product does not match with Store Product.</errorMessage>
    </validationRules>
</CustomObject>